[package]
name = "librecap-server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.1"
bincode = "1.3"
hmac = "0.12"
sha2 = "0.10"
rand = { version = "0.8", features = ["std"] }
blake3 = "1.5"
hex = "0.4"
time = { version = "0.3", features = ["serde"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
log = "0.4"
env_logger = "0.10"
redis = { version = "0.23", features = ["tokio-comp"] }
url = "2.4"
dotenvy = "0.15"
image = { version = "0.24", features = ["webp-encoder"] }
imageproc = "0.23"
rand_distr = "0.4"
