[package]
name = "librecap-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "librecap_server"
path = "src/lib.rs"

[[bin]]
name = "librecap-server"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.1"
bincode = "1.3"
bytes = "1.5"

# Cryptography and security
hmac = "0.12"
sha2 = "0.10"
blake3 = "1.5"

# Random number generation
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"

# Time handling
time = { version = "0.3", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["executor"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Database
redis = { version = "0.23", features = ["tokio-comp"] }

# Utilities
url = "2.4"
dotenvy = "0.15"
flate2 = "1.0"

# Image processing
image = { version = "0.24", features = ["webp-encoder"] }
imageproc = "0.23"
